--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
     <div class="menu">
       <div class="container-fluid">
         <div class="row pb-2 align-items-center">
-          <div class="col-lg-6 pt-3 text-center text-lg-left">
+          <div class="col-lg-6 pt-2 text-center text-lg-left">
             <a href="#" class=""
-              ><img src="assets/images/logo%20(1)%201.png" class="img-fluid"
+              ><img
+                src="assets/images/logo%20(1)%201.png"
+                class="img-fluid logo_img"
             /></a>
           </div>
-          <div class="col-lg-6 pt-3 text-center text-lg-right">
+          <div class="col-lg-6 pt-2 text-center text-lg-right">
             <p class="color" style="margin-bottom: 0">
               <span class="b">Welcome</span> <br class="d-block d-lg-none" />
               to your customer area
