--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         ></span>
                       </div>
                     </div>
-                    <div class="py-4 px-4">
+                    <div class="pt-2 pb-3 px-4">
                       <button
                         type="button"
                         class="submit btn2 btn_next"
@@ -152,7 +152,7 @@
                   </div>
                 </div>
                 <!-- info 2 End -->
-                <div class="pt-4 text-center">
+                <div class="pt-4 text-center sec_btn">
                   <button type="button" class="submit btn1 btn_next">
                     next
                   </button>
